fix: attempt of fixing background on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
   /* Use percentage height for compatibility */
   margin: 0;
   padding: 0;
-
+  overscroll-behavior: none;
 }
 
 
